# audio-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_djinni.sh  streamer.djinni
djinni/: audio-streamer.djinni
examples/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
examples/android/app/src/androidTest/java/syedharisali/audiostreamerexample/: ExampleInstrumentedTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/syedharisali/audiostreamerexample/: MainActivity.java
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml
examples/android/app/src/test/java/syedharisali/audiostreamerexample/: ExampleUnitTest.java
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/ios/AudioStreamerExample/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
examples/ios/AudioStreamerExample.xcodeproj/: project.pbxproj
examples/ios/AudioStreamerExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/ios/AudioStreamerExample/Base.lproj/: Main.storyboard
include/: audio_streamer_impl.hpp
platform/java/com/mobilecpp/streamer/: AudioStreamerProxyImpl.java
platform/java/com/mobilecpp/untitled folder/: AudioStreamerProxyImpl.java
platform/objc/: MCPAudioStreamerProxyImpl.h  MCPAudioStreamerProxyImpl.m
scripts/: build_ios.sh  build_macos.sh  run_djinni.sh
src/: audio_streamer_impl.cpp
